--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,6 +17,13 @@
   </div>
 
   <div>
+    <% @preferences.each do |preference| %>
+      <%= check_box_tag preference.id, preference.title %>
+      <%= label_tag preference.id, preference.title %>
+    <% end %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
