--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: user) do |form| %>
   <% if user.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2><%= t 'global.forms.messages.errors', count:user.errors.count %> :</h2>
 
       <ul>
         <% user.errors.each do |error| %>
@@ -16,7 +16,7 @@
     <%= form.text_field :email %>
     
   </div>
-
+  <h1><%= t 'preference'%></h1>
   <div>
     <% Preference.all.each do |preference| %>
       <%= check_box_tag "preferences_ids[]", preference.id %>
@@ -27,6 +27,6 @@
 
 
   <div>
-    <%= form.submit %>
+    <%= form.submit t 'button'%>
   </div>
 <% end %>
