--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,91 @@
  *= require_tree .
  *= require_self
  */
+html,
+body {
+  margin: 0;
+  padding: 0;
+  color: #5d5d5d;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 500px;
+  margin: 64px auto;
+}
+
+.logo {
+  max-width: 500px;
+}
+
+.logo-subtitle {
+  color: #d2d5de;
+}
+
+.titles {
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  width: 75%;
+  padding: 0 2rem;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.preferences {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.preferences-title {
+  margin: 0;
+}
+
+.checkbox {
+  display: flex;
+  gap: 0.25rem;
+}
+
+.email {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.email-input {
+  border: 2px solid rgb(94, 95, 94);
+  outline: none;
+  border-radius: 0.25rem;
+  padding: 0.25rem 0.5rem;
+}
+
+.email-input:focus {
+  border: 2px solid #66cc99;
+}
+
+.button-submit {
+  background-color: #66cc99;
+  outline: none;
+  width: fit-content;
+  border: transparent;
+  border-radius: 0.25rem;
+  padding: 0.25rem 0.5rem;
+  margin: 0 auto;
+  color: #d7f2e5;
+}
+
+input[type="checkbox"] {
+  accent-color: #66cc99;
+}
