--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: user) do |form| %>
+<%= form_with(model: user, html: {class: 'form'}) do |form| %>
   <% if user.errors.any? %>
     <div style="color: red">
       <h2><%= t 'global.forms.messages.errors', count:user.errors.count %> :</h2>
@@ -11,22 +11,18 @@
     </div>
   <% end %>
 
-  <div>
+  <div class="email">
     <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email %>
-    
+    <%= form.text_field :email , class: "email-input" %>  
   </div>
-  <h1><%= t 'preference'%></h1>
-  <div>
-    <% Preference.all.each do |preference| %>
-      <%= check_box_tag "preferences_ids[]", preference.id %>
-      <%= label_tag preference.id, preference.title %>
-    <% end %>
-  </div>
-
-
-
-  <div>
-    <%= form.submit t 'button'%>
-  </div>
+  <div class="preferences">
+    <p class="preferences-title"><%= t 'preference'%></p>    
+      <% Preference.all.each do |preference| %>   
+        <div class="checkbox">
+          <%= check_box_tag "user[preference_ids][]", preference.id,nil , id: "user_preference_ids_#{preference.id}" %>
+          <%= label_tag "user[preference_ids][#{preference.id}]", preference.title %>
+        </div>  
+      <% end %>      
+  </div>  
+  <%= form.submit t('button'), class: 'button-submit'%>
 <% end %>
