--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,7 @@ body {
   color: #5d5d5d;
   align-items: center;
   box-sizing: border-box;
+  height: 100%;
 }
 
 .container {
@@ -29,6 +30,23 @@ body {
   align-items: center;
   max-width: 500px;
   margin: 64px auto;
+}
+
+.link__container {
+  padding: 1rem;
+}
+
+.greetings__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 500px;
+  margin: auto;
+  gap: 3rem;
+  height: 100%;
+  text-align: center;
+  font-size: 1.2rem;
 }
 
 .logo {
